[package]
name = "postgresql_reducer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.4"
serde = "1.0.164"
serde_json = "1.0.99"
tokio = { version = "1.28.2", features = ["rt-multi-thread"] }
tokio-postgres = { version = "0.7.8", features = ["with-serde_json-1"] }
