[package]
name = "postgresql_reducer"
version = "0.1.0"
edition = "2021"

[dependencies]
async-recursion = "1.0.4"
serde = "1.0.164"
serde_json = "1.0.99"
tokio = { version = "1.28.2", features = ["rt-multi-thread"] }
tokio-postgres = { version = "0.7.8", features = ["with-serde_json-1"] }
eventsapis_proto = { path = "../eventsapis-proto" }
reducerapis_proto = { path = "../reducerapis-proto" }
tonic = "0.9.2"
prost-types = "0.11.9"
time = { version="0.3.22", features=["formatting", "parsing"] }
anystruct = "0.1.0"
log = "0.4.19"
futures = "0.3.28"
